--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,13 @@ buildscript {
         maven { url = "http://files.minecraftforge.net/maven" }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-//Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
 
-version = "1.11.2-1.7.2"
+version = "1.12-2.0.0"
 group= "shadows.soul" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "Wither Skeleton Tweaks"
 
@@ -21,13 +20,13 @@ compileJava {
 }
 
 minecraft {
-    version = "1.11.2-13.20.0.2233"
+    version = "1.12-14.21.0.2321"
     runDir = "run"
     mappings = "snapshot_20161220"
 }
 
 dependencies {
-
+    compile files('libs/')
 }
 
 processResources
