--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12-14.21.0.2349"
+    version = "1.12-14.21.0.2350"
     runDir = "run"
     mappings = "snapshot_20170623"
 }
@@ -42,8 +42,8 @@ repositories {
 
 dependencies {
     compile files('libs/')
-	deobfCompile "mezz.jei:jei_1.12:4.6.0.63:api"
-    //runtime "mezz.jei:jei_1.12:4.6.0.63"
+	deobfCompile "mezz.jei:jei_1.12:4.6.0.66:api"
+    runtime "mezz.jei:jei_1.12:4.6.0.66"
 	deobfCompile "mcp.mobius.waila:Hwyla:1.8.18-B32_1.12:api"
 	runtime "mcp.mobius.waila:Hwyla:1.8.18-B32_1.12"
 }
