--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.12-2.2.3"
-group= "shadows.soul"
+version = "1.12-2.3.0"
+group= "shadows.wstweaks"
 archivesBaseName = "Wither Skeleton Tweaks"
 
 sourceCompatibility = targetCompatibility = "1.8"
@@ -20,26 +20,17 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.1-14.22.1.2481"
+    version = "1.12.2-14.23.1.2566"
     runDir = "run"
-    mappings = "snapshot_20170821"
+    mappings = "snapshot_20171215"
 }
 
 repositories {
     maven {
         url "http://dvs1.progwml6.com/files/maven"
     }
-    maven {
-        url "http://maven.epoxide.xyz"
-    }
-    maven {
-        url "http://maven.amadornes.com/"
-    }
 	maven {
 		url "http://tehnut.info/maven"
-	}
-	maven {
-		url "http://maven.ic2.player.to"
 	}
 }
 
