--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.12.2-2.6.3"
+version = "1.12.2-3.0.0"
 group= "shadows.wstweaks"
 archivesBaseName = "WitherSkeletonTweaks"
 
@@ -20,9 +20,9 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.4.2739"
+    version = "1.12.2-14.23.5.2768"
     runDir = "run"
-    mappings = "snapshot_20180720"
+    mappings = "stable_39"
 	makeObfSourceJar = false
 }
 
