--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ archivesBaseName = 'WitherSkeletonTweaks-1.14.4'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20190630-1.14.3'
+    mappings channel: 'snapshot', version: '20190829-1.14.3'
     runs {
         client = {
             properties 'forge.logging.markers': ''
@@ -35,8 +35,19 @@ minecraft {
     }
 }
 
+repositories {
+    maven {
+        url "http://dvs1.progwml6.com/files/maven"
+    }
+	maven {
+		url "http://tehnut.info/maven"
+	}
+}
+
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.14.4-28.0.13'
+    minecraft 'net.minecraftforge:forge:1.14.4-28.0.74'
+	compile fg.deobf('mezz.jei:jei-1.14.4:+')
+	compile fg.deobf('mcp.mobius.waila:Hwyla:1.10+')
 	compile fileTree(dir: 'libs', include: '*.jar')
 }
 
