--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
-version = '3.1.0'
+version = '4.0.0'
 group = 'shadows.wstweaks'
-archivesBaseName = 'WitherSkeletonTweaks-1.14.4'
+archivesBaseName = 'WitherSkeletonTweaks-1.15.1'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20190829-1.14.3'
+    mappings channel: 'snapshot', version: '20200107-1.14.3'
     runs {
         client = {
             properties 'forge.logging.markers': ''
@@ -45,9 +45,9 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.14.4-28.1.104'
-	compile fg.deobf('mezz.jei:jei-1.14.4:+')
-	compile fg.deobf('mcp.mobius.waila:Hwyla:1.10+')
+    minecraft 'net.minecraftforge:forge:1.15.1-30.0.30'
+	compile fg.deobf('mezz.jei:jei-1.15.1:+')
+	//compile fg.deobf('mcp.mobius.waila:Hwyla:1.10+')
 	compile fileTree(dir: 'libs', include: '*.jar')
 }
 
