--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ archivesBaseName = 'WitherSkeletonTweaks-1.15.1'
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200107-1.14.3'
+    mappings channel: 'snapshot', version: '20200108-mixed-1.15.1'
     runs {
         client = {
             properties 'forge.logging.markers': ''
@@ -41,6 +41,9 @@ repositories {
     }
 	maven {
 		url "http://tehnut.info/maven"
+	}
+	maven { 
+		url 'https://maven.tterrag.com/' 
 	}
 }
 
