--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
-version = '4.0.0'
+version = '4.0.1'
 group = 'shadows.wstweaks'
-archivesBaseName = 'WitherSkeletonTweaks-1.15.1'
+archivesBaseName = 'WitherSkeletonTweaks-1.15.2'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    mappings channel: 'snapshot', version: '20200108-mixed-1.15.1'
+    mappings channel: 'snapshot', version: '20200426-mixed-1.15.2'
     runs {
         client = {
             properties 'forge.logging.markers': ''
@@ -37,7 +37,7 @@ minecraft {
 
 repositories {
     maven {
-        url "http://dvs1.progwml6.com/files/maven"
+        url "https://dvs1.progwml6.com/files/maven"
     }
 	maven {
 		url "http://tehnut.info/maven"
@@ -45,12 +45,15 @@ repositories {
 	maven { 
 		url 'https://maven.tterrag.com/' 
 	}
+	maven {
+		url 'https://github.com/TehNut/temporary-maven-thing/tree/master/maven/'
+	}
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.1-30.0.30'
-	compile fg.deobf('mezz.jei:jei-1.15.1:+')
-	//compile fg.deobf('mcp.mobius.waila:Hwyla:1.10+')
+    minecraft 'net.minecraftforge:forge:1.15.2-31.1.79'
+	compile fg.deobf('mezz.jei:jei-1.15.2:+')
+	compile fg.deobf('mcp.mobius.waila:Hwyla:1.10.8-B72_1.15.2')
 	compile fileTree(dir: 'libs', include: '*.jar')
 }
 
