--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -16,6 +16,8 @@ version="${file.jarVersion}" #mandatory
 
 displayName="Wither Skeleton Tweaks" #mandatory
 
+license="MIT License" #mandatory
+
 description='''
 Large colored bags, nothing more.
 '''
