--- a/gradle.properties
+++ b/gradle.properties
@@ -5,10 +5,10 @@ spacedName=Wither Skeleton Tweaks
 modid=wstweaks
 author=Shadows_of_Fire
 desc=Stopping skeleton-based frustration!
-version=7.0.0
+version=7.0.1
 mcVersion=1.18.1
 forgeVersion=39.0.5
-parchmentVersion=BLEEDING-SNAPSHOT-1.18.1
+parchmentVersion=2021.12.19-1.18.1
 jeiVersion=1.18.1:9.1.0.46
 jadeFileId=3551337
 
