--- a/gradle.properties
+++ b/gradle.properties
@@ -1,31 +1,33 @@
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
+# Basic Information
 fileName=WitherSkeletonTweaks
-spacedName=Wither Skeleton Tweaks
+modName=Wither Skeleton Tweaks
+modGroup=dev.shadowsoffire
 modid=wstweaks
 author=Shadows_of_Fire
 desc=Turns all Skeletons in the Nether into Wither Skeletons, and adds Skull Fragments.
-version=8.0.4
-mcVersion=1.19.2
-javaVersion=17
-forgeVersion=43.2.14
-parchmentVersion=2022.10.09-1.19.2
-jeiVersion=1.19.2-forge:11.3.0.262
-jadeFileId=4010505
-#curiosVer=1.19.2-5.1.1.0
-placeboDep=7.0.0
-topVersion=1.19-6.2.0-6
-#patchouliVer=1.19.2-76
+version=9.0.0
 
-#MIXINS
+# Dependencies
+mcVersion=1.20.1
+javaVersion=17
+forgeVersion=47.1.28
+parchmentVersion=2023.07.16-1.20.1
+jeiVersion=15.0.0.15
+jadeFileId=4654448
+#curiosVersion=1.19.2-5.1.1.0
+placeboVersion=8.1.2
+topVersion=1.20.0-9.0.0-1
+#patchouliVersion=1.19.2-76
+
+# Mixins
 mixin=false
 mixinVersion=0.8.5
-#These should be a comma-separated list of all the mixin classnames in the project.
-#Mixins must live at shadows.modid.mixin
-mixins=
-clientMixins=
 
-#New mappings version to use with the fg updateMappings task. 
-#When commented out, the task is not registered.
-#UPDATE_MAPPINGS=1.16.5
-#UPDATE_MAPPINGS_CHANNEL=official
+# Publishing
+curseforgeProjectId=255902
+modrinthProjectId=
+requiredDeps=placebo
+#optionalDeps=
+#incompatibleDeps=
