--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ repositories {
     maven {
         // JEI
         url "https://dvs1.progwml6.com/files/maven"
+        content {
+            includeGroup "mezz.jei"
+        }
     }
     maven {
         // CurseForge
