--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,10 @@ mixin=false
 mixinVersion=0.8.5
 
 # Publishing
-curseforgeProjectId=255902
-modrinthProjectId=
+releaseType=release
 requiredDeps=placebo
 #optionalDeps=
 #incompatibleDeps=
+modLoaders=NeoForge, Forge
+curseforgeProjectId=255902
+modrinthProjectId=
