--- a/gradle.properties
+++ b/gradle.properties
@@ -26,10 +26,10 @@ mixin=false
 mixinVersion=0.8.5
 
 # Publishing
-releaseType=release
 requiredDeps=placebo
 #optionalDeps=
 #incompatibleDeps=
+releaseType=release
 modLoaders=NeoForge, Forge
 curseforgeProjectId=255902
-modrinthProjectId=
+#modrinthProjectId=
